# pet_projects

./: .gitignore  README.md
Gruzii/: README.md  READMI.md  _check_db.py  api_car_types.json  api_loading_types.json  ati_client.py  bot.py  config.py  database.db  filter.py  handler_add_user.py  menu.py  parser_cargo.py  processed.json  requirements.txt  search_cargo.py  states.py  storage.py  subscription.py
Gruzii/.mimocode/: .cron-lock
Gruzii/handlers/: handler_admin.py  handler_direction.py  handler_filter.py  handler_presets.py  handler_start.py  handler_subscription.py  handler_type_car.py  handler_type_selection_car_load.py  handler_volume.py  handler_weight.py
ParfBar/: Dockerfile  docker-compose.yml  main.py  requirements.txt
ParfBar/CallbackData/: callbacks.py  states.py
ParfBar/database/: db.py  shop.db
RegDevice/: READMI.md  RegDevice.spec  devices.py  main.py
ai_alarm_clock/: READMI.md  ai.py  main.py  news.py  pogoda.py  traffic.py  tts.py
ai_bot/: dev_mind_bot.py  requirements.txt
aviapricebot/: READMI.md  avia_search.py  bot.py  main.py  menu.py  redis_client.py
home_eco_climat/: README.md  eco_assistant.ino
market_parser/: README.md  ozon_parser.py
poker_wallet/: Dockerfile  docker-compose.yml  poker_wallet.py  requirements.txt
prime_shell/: CMakeLists.txt  main.cpp
send_serial_port/: READMI  config.py  main.py  requirements.txt
smartgit_automation/: main.py
test_sandbox/: main.py  requirements.txt
whatsapp_bot/: README.md  main.py  message.py  parsing_xls.py  requirements.txt  tgBot.py  whatsapp.py
(+11 files in other folders)
